# stack_string

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: StackStringConfig.cmake.in
docs/: DESIGN.md  HISTORY.md
examples/: CMakeLists.txt  basic_usage.cpp  buffer_allocator_usage.cpp  mixed_usage.cpp
include/: CMakeLists.txt  fixed_buf_allocator.hpp  stack_string.hpp
tests/: CMakeLists.txt  fixed_buf_allocator_tests.cpp  stack_string_tests.cpp
